src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Catering_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catering Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entertainment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Additional attractions like music, decorations etc.</description>
        <label>Entertainment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attendees__c</fullName>
        <label>Number Of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Attendees_cant_be_lower_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>Number_Of_Attendees__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Number_Of_Attendees__c</errorDisplayField>
        <errorMessage>Complete this field with a positive number of attendees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Catering_required_Attendees_more_0</fullName>
        <active>true</active>
        <description>Enter a number of attendees on your event</description>
        <errorConditionFormula>AND( Catering_Required__c = TRUE,  Number_Of_Attendees__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Number_Of_Attendees__c</errorDisplayField>
        <errorMessage>Complete this field with a number of attendees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Entertainment_required_attendees</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  Entertainment_Required__c  = TRUE, Number_Of_Attendees__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Number_Of_Attendees__c</errorDisplayField>
        <errorMessage>Complete this field with a number of attendees.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_date_must_be_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>Event_Date__c &lt;= NOW()</errorConditionFormula>
        <errorDisplayField>Event_Date__c</errorDisplayField>
        <errorMessage>Complete this field with a correct date in future.</errorMessage>
    </validationRules>
</CustomObject>